argo-rollout-p100ssl/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: birdie
    app.kubernetes.io/component: birdie
    app.kubernetes.io/instance: birdie
  name: birdie-stable
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-80
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https-443
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: birdie
  sessionAffinity: None
  type: ClusterIP
