argo-rollout-p100ssl/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: birdie-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
      targetPort: 8080
    tls:
      mode: ISTIO_MUTUAL
    hosts:
    - "birdie-rollout-demo-ssl.apps.ocp4.private.opequon.net"
