argo-rollout-p100ssl/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: birdie-vsvc
spec:
  gateways:
  - birdie-gateway
  hosts:
  - birdie-vsvc
  - birdie-vsvc.sm-argo-rollout-p100ssl.svc.cluster.local
  - birdie-rollout-demo-ssl.apps.ocp4.private.opequon.net
  http:
  - name: primary
    route:
    - destination:
        host: birdie-stable
      weight: 100
    - destination:
        host: birdie-preview
      weight: 0
